encoding/jsonschema/testdata/txtar/defaultversion.txtar
#version: http://json-schema.org/draft-04/schema#
#strict
-- schema.json --
{
  "$id": "http://example.test",
  "type": "string"
}
-- out/decode/extract --
ERROR:
keyword "$id" is not supported in JSON schema version http://json-schema.org/draft-04/schema#:
    schema.json:2:3
